<resources>
    <string name="dark_matter_logo">Darkmattercoffee</string>
    <string name="mothership_store_front">Darkmattercoffee</string>
    <string name="mothership_interior">Darkmattercoffee</string>
    <string name="The Mothership">Darkmattercoffee</string>
    <string name="_738_n_western_ave">738 N. Western Ave</string>
    <string name="chicago_il_60612">Chicago, Il 60612</string>
    <string name="_773_697_8472">773-697-8472</string>
    <string name="open_6am_6pm_daily">Open 6am-6pm Daily</string>
</resources>
